# goldcode-python-poc

./: .gitignore  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
safe_files/: public_document.txt
templates/: vulnerable_page.html
